--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,7 +1,3 @@
-section {
-    margin: 1.25em 0;
-}
-
 section h2 {
     font-size: 2em;
     text-align: center;
@@ -90,6 +86,11 @@ section h2 {
     margin: 1em 0;
 }
 
+.services {
+    margin-top: 5em;
+}
+
+
 .service-cards {
     display: flex;
     justify-content: space-evenly;
@@ -115,5 +116,5 @@ section h2 {
 
 .service-cards p {
     margin: 1em 0;
-    width: 27ch;
+    width: 15ch;
 }
